add pathlib2 import/dep for py2 compat

--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -6,11 +6,15 @@ source:
   git_url: ..
   git_rev: master
 
+build:
+  number: 1
+
 requirements:
   build:
     - python
   run:
     - python
+    - pathlib2   [py<3]
 
 about:
   home: https://github.com/groutr/conda-tools
